tests/suite/fail/generated/types/fail_mul_f64_bool.ny
fn main() {
    let _ = 1.0 * true //~ ERROR type mismatch in `arithmetic` operation
}
